--- a/long-samp.texi
+++ b/long-samp.texi
@@ -1599,6 +1599,7 @@ concepts.
 * Assoc-lists::
 * Example-- Shortest Path::
 * Garbage::
+* Summary2::
 @end menu
 
 @node Conses
@@ -2752,75 +2753,77 @@ and in some existing Lisp systems, it is quite expensive.
 
 
 
-Summary
+@node Summary2
+@section Summary2
 
-1. A cons is a two-part data structure. Lists are made of conses
+
+@enumerate
+@item A cons is a two-part data structure. Lists are made of conses
 linked together.
 
-2. The predicate equal is less strict than eql. Essentially, it
+@item The predicate equal is less strict than eql. Essentially, it
 returns true if its arguments print the same.
 
-3. All Lisp objects behave like pointers. You never have to manipulate
+@item All Lisp objects behave like pointers. You never have to manipulate
 pointers explicitly.
 
 
 
-4. You can copy lists with c o p y - LIST , and join their elements
+@item You can copy lists with c o p y - LIST , and join their elements
 with append.
 
 
 
-5. Run-length encoding is a simple compression algorithm for use in
+@item Run-length encoding is a simple compression algorithm for use in
 restaurants.
 
 
 
-6. Common Lisp has a variety of access functions defined in terms of
+@item Common Lisp has a variety of access functions defined in terms of
 car and cdr.
 
 
-7. Mapping functions apply a function to successive elements, or
+@item Mapping functions apply a function to successive elements, or
 successive tails, of a list.
 
 
 
-8. Operations on nested lists are sometimes considered as operations
+@item Operations on nested lists are sometimes considered as operations
 on trees.
 
 
 
-9. To judge a recursive function, you only have to consider whether it
+@item To judge a recursive function, you only have to consider whether it
 covers all the cases.
 
 
 
-10. Lists can be used to represent sets. Several built-in functions
+@item Lists can be used to represent sets. Several built-in functions
 view lists this way.
 
 
 
-11. Keyword arguments are optional, and are identified not by
+@item Keyword arguments are optional, and are identified not by
 position, but by symbolic tags that precede them.
 
 
 
-12. Lists are a subtype of sequences. Common Lisp has a large number
+@item Lists are a subtype of sequences. Common Lisp has a large number
 of sequence functions.
 
 
 
-13. A cons that isn't a proper list is called a dotted list.
+@item A cons that isn't a proper list is called a dotted list.
 
 
-
-14. Lists with conses as elements can be used to represent
+@item Lists with conses as elements can be used to represent
 mappings. Such lists are called assoc-lists.
 
 
 
-15. Automatic memory management saves you from dealing with memory
+@item Automatic memory management saves you from dealing with memory
 allocation, but generating excessive garbage can make programs slow.
-
+@end enumerate
 
 
 Exercises
